--- a/client-tinyurl/package.json
+++ b/client-tinyurl/package.json
@@ -2,12 +2,15 @@
   "name": "client-tinyurl",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:3001",
   "devDependencies": {
     "react-scripts": "0.9.5"
   },
   "dependencies": {
-    "react": "^15.5.3",
-    "react-dom": "^15.5.3"
+    "material-ui": "^0.17.3",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
