--- a/client-tinyurl/package.json
+++ b/client-tinyurl/package.json
@@ -10,7 +10,8 @@
     "material-ui": "^0.17.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "3.0.3"
+    "react-router": "3.0.3",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
